--- a/sass/component/_content.sass
+++ b/sass/component/_content.sass
@@ -10,6 +10,30 @@
     bottom: $big_gap
     background: black
 
+  .score-grade
+    height: $header_H
+    background: white
+    .score
+      display: inline-block
+      margin-right: $big_gap
+
+      h6
+        margin-bottom: 5px
+
+      .score-n
+        text-align: center
+        font-size: 24px
+        color: green
+        border-bottom: 1px solid
+
+    .grade
+      display: inline-block
+      .grade-n
+        text-align: center
+        font-size: 24px
+        color: green
+        border-bottom: 1px solid
+
   .options
     width: 27%
     right: $small_gap
@@ -27,27 +51,6 @@
       border: 1px solid #eee
       height: 90px
       background: gray
-
-    .score
-      h6
-        margin-bottom: 5px
-
-      .score-n
-        text-align: center
-
-        span
-          font-size: 24px
-          color: green
-          border-bottom: 1px solid
-
-    .grade
-      .grade-n
-        text-align: center
-
-        span
-          font-size: 24px
-          color: green
-          border-bottom: 1px solid
 
     .start-pause
       margin-top: 50px
