--- a/sass/component/_content.sass
+++ b/sass/component/_content.sass
@@ -1,13 +1,12 @@
 .main
-  position: relative
   padding: $small_gap
 
   .grid,
   .options
-    position: fixed
+    position: absolute
     width: 65%
     top: $header_H + $big_gap
-    bottom: $big_gap
+    bottom: $big_gap + 7px
     background: black
 
   .score-grade
@@ -63,6 +62,13 @@
         border: none
         color: white
 
+      .button-pause
+        width: 100%
+        height: 45px
+        background: #2bb431
+        border: none
+        color: white
+
     .opts
       position: absolute
       bottom: 0
@@ -100,3 +106,6 @@
       .down-fast
         i
           color: #CC3333
+
+#tetris-block
+  position: absolute
