--- a/sass/component/_content.sass
+++ b/sass/component/_content.sass
@@ -1,3 +1,6 @@
+body
+  background: black
+
 .main
   padding: $small_gap
 
@@ -6,18 +9,21 @@
     position: absolute
     width: 65%
     top: $header_H + $big_gap
-    bottom: $big_gap + 7px
+    bottom: 24px
     background: black
 
   .score-grade
     height: $header_H
-    background: white
+    background: black
+    text-align: center
+
+    h6
+      margin-bottom: 5px
+      color: #ffffff
+
     .score
       display: inline-block
       margin-right: $big_gap
-
-      h6
-        margin-bottom: 5px
 
       .score-n
         text-align: center
@@ -36,10 +42,10 @@
   .options
     width: 27%
     right: $small_gap
-    background: white
+    background: black
 
     h6
-      color: gray
+      color: white
       margin-bottom: $small_gap
 
     .next-block,
@@ -47,24 +53,22 @@
       margin-bottom: $common_gap
 
     .block-n
-      border: 1px solid #eee
       height: 90px
-      background: gray
 
     .start-pause
       margin-top: 50px
       text-align: center
 
       .button-start
-        width: 100%
-        height: 45px
+        width: 80%
+        height: 35px
         background: $header_bg
         border: none
         color: white
 
       .button-pause
-        width: 100%
-        height: 45px
+        width: 80%
+        height: 35px
         background: #2bb431
         border: none
         color: white
@@ -109,3 +113,6 @@
 
 #tetris-block
   position: absolute
+
+.game-content
+  background: rgba(128,128,128,0.3)
